correct fonts, colors and sections, add focus and transitions, wrap with <li> link

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,11 @@
 }
 
 .body {
+    font-style: normal;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    font-size: 14;
-    color: var(--background-secondary-color)
+    font-size: 14px;
+    color: var(--primary-color)
 }
 
 
@@ -33,7 +34,7 @@ color: var(--secondary-color);
 
 .logo {
     text-decoration: none;
-    color: var(--primary-color);
+    color: black;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
@@ -44,18 +45,20 @@ color: var(--secondary-color);
 .email,
 .navigation-button,
 .active-navigation-button {
+    transition: color 333ms;
     text-decoration: none;
     color: inherit;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
     font-weight: 500;
     letter-spacing: 0.28px;
 }
 
 .tel:hover,
+.tel:focus,
 .email:hover,
+.email:focus,
 .color-part-logo,
 .navigation-button:hover,
+.navigation-button:focus,
 .active-navigation-button {
     color: var(--accent-color);
 }
@@ -69,38 +72,33 @@ color: var(--secondary-color);
 
 .hat-header {
     color: var(--background-primary-color);
-    font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
     font-size: 44px;
     font-weight: 900;
-    line-height: 60px;
+    line-height: 1.363;
     letter-spacing: 2.64px;
 }
 
 .hat-button {
     color: var(--background-primary-color);
     background-color: var(--accent-color);
-    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 700;
-    line-height: 30px;
+    line-height: 1.875;
     letter-spacing: 0.96px;
 }
 
-.feature-title {
+.features-title {
     text-transform: uppercase;
-    font-size: 14px;
-    line-height: 1.17;
+    font-size: inherit;
+    line-height: 1.714;
     letter-spacing: 0.42px;
     font-weight: 700;   
 }
 
 .features-description{
     color: var(--secondary-color);
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
+    line-height: 1.714;
     letter-spacing: 0.42px;
 }
 
@@ -114,7 +112,7 @@ color: var(--secondary-color);
 }
 
 .team {
-    background-color: var(--inactive-filter-color);
+    background-color: var(--inactive-filter-color); 
 }
 
 .team-member {
@@ -130,9 +128,7 @@ letter-spacing: 0.48px;
 
 .member-job {
     color: var(--secondary-color);
-    font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    font-weight: 400;
     letter-spacing: 0.48px;
 }
 
@@ -151,36 +147,31 @@ letter-spacing: 0.48px;
 
 .footer-logo { 
     text-decoration: none;
-    color: var(--background-primary-color);
+    color: white;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     letter-spacing: 0.78px;
 }
 
+.contact-footer {
+    font-style: normal;
+}
+
 .addres-footer {
     text-decoration: none;    
     color: var(--background-primary-color);
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16px;
+    
+    line-height: 1.142;
     letter-spacing: 0.42px;
-}
-
-.contact-footer {
-    all: initial;
-    font-family: inherit;
 }
 
 .email-footer,
 .tel-footer { 
     text-decoration: none; 
     color: var(--transperent-color);
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16px;
+    font-size: inherit;
+    line-height: 1.142;
     letter-spacing: 0.42px;
 }
 
@@ -188,46 +179,44 @@ letter-spacing: 0.48px;
 /* Main (Portfolio) */
 
 .button-filter, 
-.active-button-filter {
+.button-filter-active {
     color: var(--primary-color);
     background-color: var(--inactive-filter-color);
-    font-family: 'Roboto', sans-serif;
+    font-family: inherit;
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
-    line-height: 26px;
+    line-height: 1.625;
     letter-spacing: 0.48px;
 } 
 
-.active-button-filter,
-.button-filter:hover {
+.button-filter-active {
     color: var(--background-primary-color);
     background-color: var(--accent-color);
 }
 
-.projects-list,
-.sort-buttons-list {    
-    list-style-type: none;
+.projects {
+    background-color: var(--background-primary-color);
 }
 
-.projects{
-    background-color: var(--background-primary-color);
+.projects-list,
+.projects-list-link,
+.sort-buttons-list {    
+    list-style-type: none;
+    text-decoration: none;
 }
 
 .projects-title {
     color: var(--primary-color);
-    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 36px;
+    line-height: 2;
     letter-spacing: 1.08px; 
 }
 
 .projects-description {
     color: var(--secondary-color);
-    font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
+    line-height: 1.875;
     letter-spacing: 0.48px;
 }
